fix: Make Alegreya text more readable

--- a/src/css/sections/hero.css
+++ b/src/css/sections/hero.css
@@ -32,6 +32,7 @@
 .hero .name {
   margin-bottom: 1rem;
   font-family: Alegreya, serif;
+  letter-spacing: normal;
   text-shadow: 0 0.15rem 0.1rem rgba(0, 0, 0, 0.25);
 }
 
