--- a/src/css/sections/index.css
+++ b/src/css/sections/index.css
@@ -12,9 +12,8 @@
 section h3.title {
   padding: 3rem 0;
   font-family: Alegreya, Times, serif;
-  text-shadow: 0 0.25px 0 var(--color-text-100),
-    0 -0.25px 0 var(--color-text-100), 0.25px 0 0 var(--color-text-100),
-    -0.25px 0 0 var(--color-text-100);
+  text-shadow: 0.25px 0 var(--color-text-100), -0.25px 0 var(--color-text-100);
+  letter-spacing: normal;
   position: relative;
 }
 
